--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Server/MainMenu.MainMenu
+EditorStartupMap=/Game/Server/MainMenu.MainMenu
 GlobalDefaultGameMode="/Script/Dust.DustGameMode"
+GameInstanceClass=/Game/Server/OnlineGameInstance.OnlineGameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
@@ -71,4 +72,17 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+ 
+[OnlineSubsystem]
+DefaultPlatformService=Steam
+ 
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
