--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Server/MainMenu.MainMenu
-EditorStartupMap=/Game/Server/MainMenu.MainMenu
+GameDefaultMap=/Game/InGame/Maps/BaseMap.BaseMap
+EditorStartupMap=/Game/InGame/Maps/BaseMap.BaseMap
 GlobalDefaultGameMode="/Script/Dust.DustGameMode"
 GameInstanceClass=/Game/Server/OnlineGameInstance.OnlineGameInstance_C
 
