--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/InGame/Maps/BaseMap.BaseMap
-EditorStartupMap=/Game/InGame/Maps/BaseMap.BaseMap
+EditorStartupMap=/Game/InGame/Maps/TestMap.TestMap
 GlobalDefaultGameMode="/Script/Dust.DustGameMode"
 GameInstanceClass=/Game/Server/OnlineGameInstance.OnlineGameInstance_C
 
@@ -85,4 +85,8 @@ SteamDevAppId=480
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/Dust.BaseAnimBlueprint",NewName="/Script/Dust.CAnimInstance_Base")
 
