--- a/Dust.uproject
+++ b/Dust.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.3",
+	"EngineAssociation": "{C5ADD5CA-4056-144C-0A56-8E95CAFC0528}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
